2009-08-13  Richard Stallman  <rms@gnu.org>

	* simple.el (next-error-move-function): New variable.

2009-08-12  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (lgrep): Ensure that `default-directory' is
	always non-nil.  (Bug#4052)

	* replace.el (read-regexp): Return empty string when
	`default-value' is nil.
	(keep-lines-read-args): Don't use empty string as the
	default value for `read-regexp'.  (Bug#2495)

2009-08-12  Juri Linkov  <juri@jurta.org>

	* international/mule-cmds.el (ucs-insert): Change arguments
	from `arg' to `character', `count', `inherit' to be the same
	as in `insert-char'.  Doc fix.  (Bug#4039)

	* international/mule-conf.el (utf-16be-with-signature): Doc fix.

2009-08-12  Juri Linkov  <juri@jurta.org>

	* files-x.el: New file.

	* files.el: Move code that deals with adding/deleting
	file/directory-local variables to files-x.el.

	* Makefile.in (ELCFILES): Add files-x.elc.

2009-08-11  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gdb-mi.el (gdb-line-posns): New helper which helps not
	to use `goto-line'.
	(gdb-place-breakpoints, gdb-get-location): Rewritten without
	`goto-line'.
	(gdb-invalidate-disassembly): Do not refresh upon receiving
	'update signal. Instead, update all disassembly buffers only after
	threads list.
	(gdb): Send -target-detach when buffer is killed (#3794).
	(gdb-starting): Moved -data-list-register-names...
	(gdb-stopped): ...here so it's sent when first thread stops.
	(gdb-registers-handler-custom): Do nothing if register names are
	unknown yet.

	* progmodes/gud.el (gud-stop-subjob): Rewritten without macros
	from `gdb-mi.el' to avoid extra tangling.

	* progmodes/gdb-mi.el (gdb-gud-context-call): Reverting previous
	change which breaks `gud-def' definitions. used in `gdb'.
	(gdb-update-gud-running): No extra fuss for updating frame number.

2009-08-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (mule-keymap, mule-menu-keymap)